--- a/meme_gen_android/res/layout/meme_list_item_layout.xml
+++ b/meme_gen_android/res/layout/meme_list_item_layout.xml
@@ -21,10 +21,9 @@
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_gravity="center_vertical"
-        android:scaleType="fitStart"
         android:minWidth="@dimen/meme_list_item_thumb_min_width"
-        android:maxWidth="@dimen/meme_list_item_thumb_max_width"
-        android:src="@drawable/config_icon" />
+        android:scaleType="fitStart"
+        android:src="@drawable/college_freshman" />
 
     <TextView
         android:id="@+id/list_item_text_view"
