--- a/meme_gen_android/res/layout-land/create_meme_layout.xml
+++ b/meme_gen_android/res/layout-land/create_meme_layout.xml
@@ -32,7 +32,7 @@
 
         <fragment
             android:id="@+id/create_meme_buttons_fragment"
-            android:name="com.eastapps.meme_gen_android.widget.fragment.CreateMemeButtonsFragment"
+            android:name="com.trymeme.meme_gen_android.widget.fragment.CreateMemeButtonsFragment"
             android:layout_width="fill_parent"
             android:layout_height="0dp"
             android:layout_gravity="top"
