--- a/meme_gen_android/res/layout/meme_list_item_layout.xml
+++ b/meme_gen_android/res/layout/meme_list_item_layout.xml
@@ -16,7 +16,7 @@
         android:maxWidth="@dimen/meme_list_item_heart_btn_max_width"
         android:src="@drawable/fav_icon_v2" />
 
-    <com.eastapps.meme_gen_android.widget.ResizableImageView
+    <com.trymeme.meme_gen_android.widget.ResizableImageView
         android:id="@+id/list_item_thumb_img_view"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
