--- a/meme_gen_android/res/layout/meme_type_search_list_layout.xml
+++ b/meme_gen_android/res/layout/meme_type_search_list_layout.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/meme_type_search_list_fragment"
-        android:name="com.eastapps.meme_gen_android.widget.fragment.MemeListFragment"
+        android:name="com.trymeme.meme_gen_android.widget.fragment.MemeListFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
