--- a/meme_gen_android/res/layout/meme_list_layout.xml
+++ b/meme_gen_android/res/layout/meme_list_layout.xml
@@ -9,7 +9,7 @@
         android:id="@+id/meme_list_filter_bar_fragment"
         android:name="com.trymeme.meme_gen_android.widget.fragment.MemeListFilterBarFragment"
         android:layout_width="match_parent"
-        android:layout_height="175dp"
+        android:layout_height="125dp"
         android:layout_weight="1" />
 
     <fragment
@@ -20,11 +20,11 @@
         android:layout_weight="1"
         android:tag="list_frag" />
 
-    <com.mobclix.android.sdk.MobclixMMABannerXLAdView
+    <!-- <com.mobclix.android.sdk.MobclixMMABannerXLAdView
         android:id="@+id/advertising_banner_view"
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:tag="adspace" />
+        android:tag="adspace" /> -->
 
 </LinearLayout>
